<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center"
    android:orientation="vertical"
    android:padding="5dip">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="20dip">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/color_red"
                    android:textColor="#FF0000"
                    android:textSize="25dp" />

                <CheckBox
                    android:id="@+id/radio_red"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:onClick="onCheckboxClicked"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/color_green"
                    android:textColor="#00FF00"
                    android:textSize="25dp" />

                <CheckBox
                    android:id="@+id/radio_green"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:onClick="onCheckboxClicked"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/color_blue"
                    android:textColor="#0000FF"
                    android:textSize="25dp" />

                <CheckBox
                    android:id="@+id/radio_blue"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:onClick="onCheckboxClicked"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/color_yellow"
                    android:textColor="#FFFF00"
                    android:textSize="25dp" />

                <CheckBox
                    android:id="@+id/radio_yellow"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:onClick="onCheckboxClicked"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/color_purple"
                    android:textColor="#FF00FF"
                    android:textSize="25dp" />

                <CheckBox
                    android:id="@+id/radio_purple"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:onClick="onCheckboxClicked"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/color_cyan"
                    android:textColor="#00FFFF"
                    android:textSize="25dp" />

                <CheckBox
                    android:id="@+id/radio_cyan"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:onClick="onCheckboxClicked"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="10dp"
                android:gravity="center"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/color_white"
                    android:textColor="#000000"
                    android:textSize="25dp" />

                <CheckBox
                    android:id="@+id/radio_white"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:onClick="onCheckboxClicked"
                    android:scaleX="1.5"
                    android:scaleY="1.5" />

            </LinearLayout>

        </LinearLayout>

        <SeekBar
            android:id="@+id/SeekBar_red"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:max="15"
            android:maxHeight="4.0dip"
            android:minHeight="4.0dip"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:progressDrawable="@drawable/red_seekbar"
            android:thumb="@drawable/seekbar_thumb" />

        <TextView
            android:id="@+id/textView3"
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <SeekBar
            android:id="@+id/SeekBar_green"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:max="15"
            android:maxHeight="4.0dip"
            android:minHeight="4.0dip"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:progressDrawable="@drawable/blue_seekbar"
            android:thumb="@drawable/seekbar_thumb" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="match_parent"
            android:layout_height="12dp" />

        <SeekBar
            android:id="@+id/SeekBar_blue"
            android:layout_width="600dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:focusable="true"
            android:max="15"
            android:maxHeight="4.0dip"
            android:minHeight="4.0dip"
            android:paddingLeft="16.0dip"
            android:paddingRight="16.0dip"
            android:progressDrawable="@drawable/green_seekbar"
            android:thumb="@drawable/seekbar_thumb" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:gravity="right"
            android:orientation="horizontal"
            android:paddingLeft="16.0dip"
            android:paddingRight="350dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/smt_save"
                android:textSize="20dp" />

            <Switch
                android:id="@+id/switch_save"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:gravity="right"
                tools:ignore="RtlHardcoded" />

        </LinearLayout>

    </LinearLayout>

</LinearLayout>